--- a/src/components/Common/Menu/MenuItems/style.css
+++ b/src/components/Common/Menu/MenuItems/style.css
@@ -9,3 +9,50 @@
     display: flex;
 }
 
+.item img {
+    margin-top: -3.5rem;
+    height: 130px;
+    object-fit: contain;
+}
+
+.item-foot_desc {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item-head_desc p {
+    margin: 0;
+    margin-bottom: 0.5rem;
+}
+.item-foot_desc button {
+    background: #000;
+    color: #fff;
+    border-radius: 20%;
+}
+.item-head_desc {
+    text-align: left;
+    flex: 1;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.head_desc-name {
+    font-weight: 600;
+    font-size: 0.9rem;
+    text-transform: capitalize;
+    flex: 1;
+}
+
+.head_desc-info {
+    font-size: 0.8rem;
+    color: #a0a0a0;
+}
+
+.food_desc-price {
+    font-weight: 70
+    0;
+}
+
